Update author information

--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "case",
     "underscore"
   ],
-  "author": "Blake Embrey",
+  "author": {
+    "name": "Blake Embrey",
+    "email": "hello@blakeembrey.com",
+    "url": "http://blakeembrey.me"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/blakeembrey/snake-case/issues"
